--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,181 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+*{
+  font-family: 'Roboto', sans-serif;
 }
+.header{
+  background-image: url('https://unsplash.com/assets/api/api-photo-grid@2x-3b92db4cdfc938c6dde2291ca1c78ab7ace98ef916a8dd08c00a6b006c0b631b.jpg');
+  /* background: #008B8B; */
+  background-repeat: repeat-x;
+  background-position: center;
+  animation: slide 60s linear infinite;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.homeh2{
+  font-size: 28px;
+    margin: 20px 10px;
+    letter-spacing: 0.5px;
 }
+.header-box{
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background:#00000061;
+  height: 450px;
+  padding: 100px;
+  padding-top:150px;
+}
+.subcat{
+  border-bottom: 1px solid #4c4c4c38;
+    padding: 10px 0px;
+}
+.navbar{
+background:#4c4c4c;
   color: white;
+  width: 100%;
+  top: 0;
 }
-
-.App-link {
-  color: #61dafb;
+.navbar-brand{
+  color: white;
+    font-weight: 900;
+    font-size: 25px;
 }
-
-@keyframes App-logo-spin {
+.nav-link{
+  color: white;
+  font-size: 20px;
+  margin-top: 9px;
+}
+.header h2{
+  color:white;
+}
+.NavbarFixed{
+  background:#4c4c4c;
+  box-shadow: 0 4px 5px -2px rgb(0 0 0 / 16%);
+  animation: mymove 0.9s ease-in-out;
+}
+@keyframes mymove {
   from {
-    transform: rotate(0deg);
+    top: -100px;
   }
   to {
-    transform: rotate(360deg);
+    top: 0px;
+  }
+}
+.submenu{
+  background: #4c4c4c;
+  color: white;
+  padding: 50px;
+  padding-top: 100px;
+  text-transform: uppercase;
+}
+.form-control{
+  padding: 12px 20px;
+  margin-top: 20px;
+  font-size: 18px;
+  text-transform: capitalize;
+  border: none;
+  border-radius: 10px;
+  letter-spacing: 1px;
+}
+
+.buton{
+  background: #fff;
+    color: #1a1a1a;
+    border: 1px solid rgba(26,26,26,.15);
+    padding: 11px 24px !important;
+    box-shadow: 0 1px 1px 0 rgb(0 0 0 / 5%);
+    display: inline-flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 3px;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 600;
+    text-align: center;
+    text-decoration: none;
+    white-space: nowrap;
+}
+.don{
+  background: #4c4c4c !important;
+  color: white !important;
+  margin-left: 20px;
+}
+.text-right{
+  text-align: right;
+}
+.user-img{
+  border-radius:70% !important;
+}
+.imagebox span{
+  font-size: 22px;
+    margin-left: 15px;
+    color: #1a1a1a;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+}
+.tag{
+  list-style: none;
+  padding: 0px;
+}
+.tag li{
+  display: inline-block;
+  margin: 2px;
+  margin-bottom:20px;
+}
+.tag li a{
+  background-color: #e1e1e1;
+    color: #111;
+    text-decoration: none;
+    padding: 8px 10px;
+    font-size: 14px;
+    margin: 8px;
+    border-radius: 2px;
+}
+.photos {
+  /* Prevent vertical gaps */
+  line-height: 0;
+   
+  -webkit-column-count: 3;
+  -webkit-column-gap:   0px;
+  -moz-column-count:    3;
+  -moz-column-gap:      0px;
+  column-count:         3;
+  column-gap:           0px;  
+}
+
+.photos img {
+  /* Just in case there are inline attributes */
+  width: 100% !important;
+  height: auto !important;
+  padding:10px;
+}
+
+@media (max-width: 1200px) {
+  .photos {
+  -moz-column-count:    3;
+  -webkit-column-count: 3;
+  column-count:         3;
+  }
+}
+@media (max-width: 1000px) {
+  .photos {
+  -moz-column-count:    3;
+  -webkit-column-count: 3;
+  column-count:         3;
+  }
+}
+@media (max-width: 800px) {
+  .photos {
+  -moz-column-count:    2;
+  -webkit-column-count: 2;
+  column-count:         2;
+  }
+}
+@media (max-width: 400px) {
+  .photos {
+  -moz-column-count:    1;
+  -webkit-column-count: 1;
+  column-count:         1;
   }
 }
