--- a/src/App.css
+++ b/src/App.css
@@ -22,12 +22,19 @@
   padding: 100px;
   padding-top:150px;
 }
+.header-box h2{
+  font-size: 36px;
+    font-weight: 700;
+    line-height: 48px;
+    margin-bottom: 15px;
+    letter-spacing: 0.5px;
+}
 .subcat{
   border-bottom: 1px solid #4c4c4c38;
     padding: 10px 0px;
 }
 .navbar{
-background:#4c4c4c;
+  position: fixed;
   color: white;
   width: 100%;
   top: 0;
@@ -39,8 +46,8 @@ background:#4c4c4c;
 }
 .nav-link{
   color: white;
-  font-size: 20px;
-  margin-top: 9px;
+  font-size: 18px;
+  margin-top: 1px;
 }
 .header h2{
   color:white;
@@ -49,6 +56,7 @@ background:#4c4c4c;
   background:#4c4c4c;
   box-shadow: 0 4px 5px -2px rgb(0 0 0 / 16%);
   animation: mymove 0.9s ease-in-out;
+  z-index: 1;
 }
 @keyframes mymove {
   from {
